Top page and menu bottom on mobile fixed and working

--- a/public/css/_globals.scss
+++ b/public/css/_globals.scss
@@ -53,3 +53,13 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+#holder {
+  min-height: 100%;
+  position: relative;
+}
+
+#body {
+  padding-top: 90px;
+  padding-bottom: 100px;
+}
