--- a/public/css/_menu-mobile.scss
+++ b/public/css/_menu-mobile.scss
@@ -1,7 +1,9 @@
 .container-menu-mobile {
-  position: fixed;
-  bottom: 0;
+  height: 85px;
   width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
 .menu-mobile {
   background-color: $bg-color;
