--- a/public/css/_top-page-mobile.scss
+++ b/public/css/_top-page-mobile.scss
@@ -1,6 +1,11 @@
 .container-logo-top {
   background-color: $bg-color;
   border-bottom: 1px solid rgb(121, 121, 121);
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  //   left: 0;
+  top: 0;
 }
 
 .logo {
