--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,16 @@ ul {
   padding: 0;
 }
 
+#holder {
+  min-height: 100%;
+  position: relative;
+}
+
+#body {
+  padding-top: 90px;
+  padding-bottom: 100px;
+}
+
 .login-container {
   background-color: #f3f4f7;
   font-family: "Open Sans", sans-serif;
@@ -110,6 +120,10 @@ ul {
 .container-logo-top {
   background-color: #f3f4f7;
   border-bottom: 1px solid #797979;
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 .logo {
@@ -121,9 +135,11 @@ ul {
 }
 
 .container-menu-mobile {
-  position: fixed;
-  bottom: 0;
+  height: 85px;
   width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
 
 .menu-mobile {
